--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
                                     <span class="icon-left">
                                         <i class="fa fa-phone"></i>
                                     </span>
-                                    (17) 99168-6069
+                                    (21) 983253319
                                 </a>
                             </div>
                         </div>
-                        <a href="https://www.instagram.com/limafront/" target="_blank" class="btn btn-sm btn-white btn-social mt-4 mr-3 wow fadeIn delay-05s">
+                        <a href="https://www.instagram.com/eufabriciofelix/" target="_blank" class="btn btn-sm btn-white btn-social mt-4 mr-3 wow fadeIn delay-05s">
                             <i class="fab fa-instagram"></i>
                         </a>
                         <a class="btn btn-sm btn-white btn-social mt-4 mr-3 wow fadeIn delay-05s">
