--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                                 Aproveite nosso cardápio! Escolha o que desejar e recebe em sua casa de forma rápida e segura.
                             </p>
                             <div class="wow fadeIn delay-05s">
-                                <a class="btn btn-yellow mt-4 mr-3">
+                                <a href="#cardapio" class="btn btn-yellow mt-4 mr-3">
                                     Ver cardápio
                                 </a>
                                 <a href="#" class="btn btn-white btn-icon-left mt-4" id="btnLigar">
                                     <span class="icon-left">
                                         <i class="fa fa-phone"></i>
                                     </span>
-                                    (21) 983253319
+                                    (21) 98325-3319
                                 </a>
                             </div>
                         </div>
